<resources>
    <string name="app_name">MovieApp</string>
    <string name="image_back">Image back</string>
    <string name="movie_poster">Movie poster</string>
    <string name="gradient_for_movie_poster">Gradient for movie poster</string>
    <string name="back">Back</string>
    <string name="name">Avengers:\nEnd Game</string>
    <string name="some_id">%d+</string>
    <string name="tag">Action, Adventure, Fantasy</string>
    <string name="votes">%d REVIEWS</string>
    <string name="star_icon">Star Icon</string>
    <string name="story_line">Storyline</string>
    <string name="story_line_text">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="casts">Actors</string>
    <string name="robert_downey_jr">Robert\nDowney Jr.</string>
    <string name="actors">Photo actors</string>
    <string name="chris_evans">Chris\nEvans</string>
    <string name="mark_ruffalo">Mark\nRuffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="movies_list_title">Movies list</string>
    <string name="_13">13+</string>
    <string name="reviews">125 Reviews</string>
    <string name="movie_name">Avengers: End Game</string>
    <string name="movie_time">MIN</string>
    <string name="actor_photo">Actor Photo</string>

    <string name="category_popular">Popular Movie</string>
    <string name="category_now_playing">Now Playing</string>
    <string name="category_top_rated">Top Rated</string>
    <string name="category_upcoming">Upcoming</string>
    <string name="like_view">Like View</string>

</resources>