<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollViewCount"
    tools:context=".MovieDetailsActivity"
    android:background="@color/test"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/orig"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:contentDescription="@string/movie_poster"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/orig" />

        <ImageView
            android:id="@+id/maskG"
            android:layout_width="1675dp"
            android:layout_height="298dp"
            android:background="@drawable/mask"
            android:contentDescription="@string/gradient_for_movie_poster"
            app:layout_constraintBottom_toBottomOf="@+id/orig"
            app:layout_constraintEnd_toEndOf="@id/orig"
            app:layout_constraintStart_toStartOf="@id/orig"
            app:layout_constraintTop_toTopOf="@id/orig" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="56dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/path"
            android:elevation="4dp"
            android:fontFamily="@font/robotoregular"
            android:gravity="center_vertical|center_horizontal|start"
            android:paddingStart="1dp"
            android:paddingEnd="48dp"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@color/path_color"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/some_id"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="154dp"
            android:layout_marginEnd="319dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/rectangle"
            android:fontFamily="@font/robotoblack"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/some_id"
            android:textAppearance="@style/some_id"
            app:layout_constraintBottom_toTopOf="@id/tvName"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/buttonBack" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="343dp"
            android:layout_height="80dp"
            android:fontFamily="@font/robotoblack"
            android:gravity="center_vertical|center_horizontal|start"
            android:lineSpacingExtra="-1sp"
            android:lineSpacingMultiplier="0.80"
            android:text="@string/name"
            android:textAppearance="@style/name"
            android:textStyle="normal|bold"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/some_id" />

        <TextView
            android:id="@+id/tagLine"
            android:layout_width="343dp"
            android:layout_height="20dp"
            android:fontFamily="@font/robotoregular"
            android:gravity="center_vertical|center_horizontal|start"
            android:text="@string/tag"
            android:textAppearance="@style/tag"
            android:textStyle="normal"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="395dp" />

        <ImageView
            android:id="@+id/star_icon_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/star_icon"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tagLine"
            app:srcCompat="@drawable/staricon" />

        <ImageView
            android:id="@+id/star_icon_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/star_icon"
            app:layout_constraintBottom_toBottomOf="@+id/star_icon_1"
            app:layout_constraintStart_toEndOf="@+id/star_icon_1"
            app:layout_constraintTop_toTopOf="@+id/star_icon_1"
            app:srcCompat="@drawable/staricon" />

        <ImageView
            android:id="@+id/star_icon_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/star_icon"
            app:layout_constraintBottom_toBottomOf="@+id/star_icon_2"
            app:layout_constraintStart_toEndOf="@+id/star_icon_2"
            app:layout_constraintTop_toTopOf="@+id/star_icon_2"
            app:srcCompat="@drawable/staricon" />

        <ImageView
            android:id="@+id/star_icon_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/star_icon"
            app:layout_constraintBottom_toBottomOf="@+id/star_icon_3"
            app:layout_constraintStart_toEndOf="@+id/star_icon_3"
            app:layout_constraintTop_toTopOf="@+id/star_icon_3"
            app:srcCompat="@drawable/staricon" />

        <ImageView
            android:id="@+id/star_icon_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/star_icon"
            app:layout_constraintBottom_toBottomOf="@+id/star_icon_4"
            app:layout_constraintStart_toEndOf="@+id/star_icon_4"
            app:layout_constraintTop_toTopOf="@+id/star_icon_4"
            app:srcCompat="@drawable/stariconempty" />

        <TextView
            android:id="@+id/votes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/robotoblack"
            android:textAllCaps="true"
            android:text="@string/votes"
            android:textColor="@color/path_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/star_icon_5"
            app:layout_constraintStart_toEndOf="@+id/star_icon_5"
            app:layout_constraintTop_toTopOf="@+id/star_icon_5" />

        <TextView
            android:id="@+id/storyLineName"
            android:layout_width="343dp"
            android:layout_height="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/story_line"
            android:fontFamily="@font/robotoblack"
            android:textStyle="bold"
            android:textAppearance="@style/StoryLineName"
            android:lineSpacingExtra="4sp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/votes"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintHorizontal_bias="0"/>

        <TextView
            android:id="@+id/storyLineText"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:text="@string/story_line_text"
            android:fontFamily="@font/robotoregular"
            android:textStyle="normal"
            android:textAppearance="@style/after_the_d"
            android:lineSpacingExtra="4sp"
            android:alpha="0.75"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/storyLineName"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"/>

        <TextView
            android:id="@+id/casts"
            android:layout_width="243dp"
            android:layout_height="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/casts"
            android:fontFamily="@font/robotoblack"
            android:textStyle="bold"
            android:textAppearance="@style/heading"
            android:lineSpacingExtra="8sp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/storyLineText"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintHorizontal_bias="0"/>

        <ImageView
            android:id="@+id/imgRBD"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/actors"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/casts"
            app:srcCompat="@drawable/rbd" />

        <TextView
            android:id="@+id/robert_down"
            android:layout_width="80dp"
            android:layout_height="32dp"
            android:text="@string/robert_downey_jr"
            app:layout_constraintTop_toBottomOf="@id/imgRBD"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/actors" />

        <ImageView
            android:id="@+id/imgChrisEvans"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/actors"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toEndOf="@id/imgRBD"
            app:layout_constraintTop_toBottomOf="@+id/casts"
            app:srcCompat="@drawable/chrisevans" />

        <TextView
            android:id="@+id/chrisevans"
            android:layout_width="80dp"
            android:layout_height="32dp"
            android:text="@string/chris_evans"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/imgChrisEvans"
            app:layout_constraintStart_toEndOf="@+id/robert_down"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/actors" />

        <ImageView
            android:id="@+id/imgMarkRuffalo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/actors"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toEndOf="@id/imgChrisEvans"
            app:layout_constraintTop_toBottomOf="@+id/casts"
            app:srcCompat="@drawable/markruffalo" />

        <TextView
            android:id="@+id/mark_ruffalo"
            android:layout_width="80dp"
            android:layout_height="32dp"
            android:text="@string/mark_ruffalo"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/imgMarkRuffalo"
            app:layout_constraintStart_toEndOf="@+id/chrisevans"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/actors" />

        <ImageView
            android:id="@+id/imgChrisHemsworth"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/actors"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toEndOf="@id/imgMarkRuffalo"
            app:layout_constraintTop_toBottomOf="@+id/casts"
            app:srcCompat="@drawable/chrishem"/>

        <TextView
            android:id="@+id/chris_hemsworth"
            android:layout_width="80dp"
            android:layout_height="32dp"
            android:text="@string/chris_hemsworth"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/imgChrisEvans"
            app:layout_constraintStart_toEndOf="@+id/mark_ruffalo"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/actors" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>