<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_back" />

    <ImageView
        android:id="@+id/orig"
        android:layout_width="match_parent"
        android:layout_height="298dp"
        android:contentDescription="@string/movie_poster"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/orig" />

    <ImageView
        android:id="@+id/maskG"
        android:layout_width="675dp"
        android:layout_height="298dp"
        android:background="@drawable/mask"
        android:contentDescription="@string/gradient_for_movie_poster"
        app:layout_constraintBottom_toBottomOf="@+id/orig"
        app:layout_constraintEnd_toEndOf="@id/background"
        app:layout_constraintStart_toStartOf="@id/background"
        app:layout_constraintTop_toTopOf="@id/background" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="56dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/path"
        android:elevation="4dp"
        android:fontFamily="@font/robotoregular"
        android:paddingStart="1dp"
        android:paddingEnd="48dp"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/path_color"
        android:textSize="12sp"
        android:gravity="center_vertical|center_horizontal|start"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/background" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/name"
        android:layout_width="343dp"
        android:layout_height="112dp"
        android:layout_marginBottom="154dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/buttonBack">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="343dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/robotoblack"
            android:gravity="center_vertical"
            android:lineSpacingExtra="0sp"
            android:lineSpacingMultiplier="0.77"
            android:text="@string/name"
            android:textAppearance="@style/name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/pg"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/some_id"
                android:layout_width="0dp"
                android:layout_height="16dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/robotoblack"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/some_id"
                android:textAppearance="@style/some_id" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="395dp" />


</androidx.constraintlayout.widget.ConstraintLayout>