<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewMovie"
    android:layout_width="170dp"
    android:layout_height="296dp"
    android:layout_marginStart="6dp"
    android:layout_marginEnd="6dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_list">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="match_parent"
            android:layout_height="246dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="48dp"
            android:contentDescription="@string/movie_poster"
            android:foreground="@drawable/mask_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/movie" />

        <ImageView
            android:id="@+id/likeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="6dp"
            app:layout_constraintTop_toTopOf="@id/minimumAge"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/minimumAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:alpha="0.9"
            android:background="@drawable/rectangle"
            android:fontFamily="@font/robotoblack"
            android:gravity="center_horizontal|center_vertical"
            android:padding="4dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/poster"
            app:layout_constraintTop_toTopOf="@+id/poster" />

        <TextView
            android:id="@+id/genres"
            android:layout_width="146dp"
            android:layout_height="12dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="214dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="22dp"
            android:fontFamily="@font/robotoblack"
            android:text="@string/tag"
            android:textColor="@color/tag"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="@id/poster"
            app:layout_constraintEnd_toEndOf="@+id/poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/poster"
            tools:ignore="SmallSp" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/CustomRatingBar"
            android:layout_marginStart="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genres" />

        <TextView
            android:id="@+id/numberOfRatings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/reviews"
            android:textColor="@color/color_reviews"
            android:textSize="8sp"
            android:fontFamily="@font/robotoblack"
            app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            app:layout_constraintTop_toTopOf="@+id/ratingBar"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/movieName"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/robotoblack"
            android:text="@string/movie_name"
            android:textColor="@color/nameText"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster" />

        <TextView
            android:id="@+id/timeMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_time"
            android:textAllCaps="true"
            android:textColor="@color/color_reviews"
            android:textSize="8sp"
            android:fontFamily="@font/robotoblack"
            app:layout_constraintStart_toStartOf="@+id/movieName"
            app:layout_constraintTop_toBottomOf="@+id/movieName"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>